# tobala

./: .env.example  .gitignore  Dockerfile.backend  Dockerfile.frontend  LICENSE  Makefile  README.md  docker-compose.yml  pyproject.toml
agave/: apps.py  conf.py
agave/contrib/rest/: viewsets.py
agave/db/backends/postgresql/: base.py
agave/managers/: __init__.py  vector.py
agave/migrations/: 0001_initial.py  _autodetector.py
agave/models/: __init__.py  constraints.py  edges.py  options.py
agave/utils/: cypher_ast.py  embedding.py
apps/backend/: manage.py  requirements.txt
apps/backend/accounts/: apps.py  models.py  serializers.py  signals.py  urls.py  views.py
apps/backend/accounts/migrations/: 0001_initial.py
apps/backend/eval/: golden_questions.yaml  golden_tags.yaml
apps/backend/eval/results/: retrieval_openai_gpt-4o_20260414T204732Z.csv  tagging_openai_gpt-4o-mini_20260414T204834Z.csv
apps/backend/notes/: admin.py  apps.py  consumers.py  embeddings.py  events.py  linking.py  models.py  observability.py  onboarding.py  retrieval.py  routing.py  serializers.py  signals.py  tagging.py  tasks.py  urls.py  views.py
apps/backend/notes/fixtures/: onboarding.yaml
apps/backend/notes/migrations/: 0001_initial.py  0002_agave_graph.py  0003_embedding_1536.py  0004_contexts_tags.py  0005_notelink_status.py  0006_llminvocation.py  0007_note_content_hash.py  0008_note_tagging_linking_hash.py
apps/backend/notes/providers/: __init__.py  anthropic.py  base.py  openai.py
apps/backend/tobala_project/: __init__.py  asgi.py  celery.py  settings.py  urls.py  ws_auth.py  wsgi.py
apps/frontend/: package-lock.json  package.json
apps/frontend/src/app/: globals.css  layout.tsx  page.tsx  providers.tsx
apps/frontend/src/components/: Answer.tsx  AuthShell.tsx  CatDropdown.tsx  CitedNotes.tsx  ContextDropdown.tsx  EdgeCreator.tsx  GraphViewSVG.tsx  InspiredNotes.tsx  (+5 more)
tests/: test_conf.py
tests/test_managers/: test_graph_manager.py  test_vector_manager.py
tests/test_migrations/: test_operations.py
tests/test_models/: test_edge.py  test_graph_model.py
tests/testapp/: models.py
(+28 files in other folders)
